--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h1>Task Tracker <img src="check.png" alt="" width="48px" height="45px"></h1>
+            <h1>Task Tracker <img src="assets/images/check.png" alt="check icon" width="48px" height="45px"></h1>
             <form action="" class="task-form" id="taskForm">
                 <input type="text" id="taskInput" placeholder="Create new task">
                 <button type="submit" class="add-button" id="addButton" onclick="addTask()">Add</button>
